--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -1,7 +1,7 @@
 .navbar {
   background-color: var(--page-element);
   /* Fix shadow varible */
-  box-shadow: 0 2px 2px hsl(0, 0%, 15%);
+  /* box-shadow: 0 2px 2px hsl(0, 0%, 15%); */
   padding: 3em 1em;
   display: flex;
   align-items: center;
