--- a/src/index.css
+++ b/src/index.css
@@ -14,6 +14,7 @@
 
 [data-theme="dark"] {
   --page-element: hsl(209, 23%, 22%);
+  --page-element-shadow: hsl(209, 23%, 14%);
   --main-background: hsl(207, 26%, 17%);
   --font-colour: hsl(0, 0%, 100%);
 }
