--- a/src/components/Borders/Border/Border.css
+++ b/src/components/Borders/Border/Border.css
@@ -7,6 +7,7 @@
   align-items: center;
   justify-content: center;
   min-width: 8em;
+  box-shadow: 0 0 10px 0 var(--page-element-shadow);
 }
 
 @media (min-width: 90rem) {
