--- a/src/components/Detail/Detail.css
+++ b/src/components/Detail/Detail.css
@@ -15,6 +15,10 @@
   filter: invert(100%) sepia(2%) saturate(0%) hue-rotate(221deg)
     brightness(105%) contrast(103%);
 }
+.left-arrow.light {
+  filter: invert(0%) sepia(0%) saturate(2%) hue-rotate(278deg) brightness(104%)
+    contrast(100%);
+}
 
 .large-country-flag {
   margin-top: 4em;
