--- a/src/components/Search/Filter/Filter.css
+++ b/src/components/Search/Filter/Filter.css
@@ -1,5 +1,12 @@
 .dropdown-container {
   width: 14em;
+  margin: 1em 0 3em 0;
+}
+
+@media (min-width: 45em) {
+  .dropdown-container {
+    margin: 0;
+  }
 }
 
 .region-filter-dropdown {
@@ -8,6 +15,7 @@
   border-radius: 4px;
   background-color: var(--page-element);
   color: var(--font-colour);
+  box-shadow: 0 0 10px 0 var(--page-element-shadow);
   width: 100%;
   padding: 1.5em;
   position: relative;
@@ -25,6 +33,10 @@
   transform: translateY(-15%);
   filter: invert(100%) sepia(54%) saturate(2%) hue-rotate(320deg)
     brightness(110%) contrast(100%);
+}
+.chevron-down.light {
+  filter: invert(0%) sepia(0%) saturate(2%) hue-rotate(278deg) brightness(104%)
+    contrast(100%);
 }
 
 .dropdown-options {
