added 404 page and updated classnames

--- a/src/App.css
+++ b/src/App.css
@@ -6,4 +6,6 @@
   letter-spacing: 0.05em;
   background-color: var(--main-background);
   min-height: 100vh;
+  display: flex;
+  flex-direction: column;
 }
