--- a/src/components/Search/Search.css
+++ b/src/components/Search/Search.css
@@ -1,10 +1,10 @@
-.input-container {
+.container__input {
   display: flex;
   justify-content: space-between;
   flex-direction: column;
 }
 
-.search-container {
+.container__search {
   position: relative;
   margin-bottom: 2em;
   flex-basis: 35%;
@@ -13,15 +13,15 @@
 }
 
 @media (min-width: 45rem) {
-  .input-container {
+  .container__input {
     flex-direction: row;
   }
-  .search-container {
+  .container__search {
     margin-bottom: 4em;
   }
 }
 
-.magnifying-glass {
+.container__search--icon {
   width: 1.5em;
   position: absolute;
   left: 2em;
@@ -29,12 +29,12 @@
   filter: invert(100%) sepia(54%) saturate(2%) hue-rotate(320deg)
     brightness(110%) contrast(100%);
 }
-.magnifying-glass.light {
+.container__search--icon.light {
   filter: invert(0%) sepia(0%) saturate(2%) hue-rotate(278deg) brightness(104%)
     contrast(100%);
 }
 
-.search-box {
+.search__input {
   border: none;
   border-radius: 5px;
   padding: 2em;
@@ -43,10 +43,10 @@
   background-color: var(--page-element);
   width: 100%;
 }
-.search-box:focus {
+.search__input:focus {
   outline: none;
 }
-.search-box::placeholder {
+.search__input::placeholder {
   text-align: left;
   padding-left: 3em;
   color: var(--font-colour);
