--- a/src/pages/Home/Home.css
+++ b/src/pages/Home/Home.css
@@ -1,9 +1,9 @@
-.main-content-container {
+.container__content--main {
   padding: 2em;
 }
 
 @media (min-width: 45rem) {
-  .main-content-container {
+  .container__content--main {
     padding: 4em 6em;
   }
 }
