--- a/src/index.css
+++ b/src/index.css
@@ -21,7 +21,7 @@
 
 [data-theme="light"] {
   --page-element: hsl(0, 0%, 100%);
-  --page-element-shadow: #D3D3D3;
+  --page-element-shadow: #d3d3d3;
   --main-background: hsl(0, 0%, 98%);
   --font-colour: hsl(200, 15%, 8%);
   --light-mode-input: hsl(0, 0%, 52%);
