--- a/src/components/Countries/Country/Country.css
+++ b/src/components/Countries/Country/Country.css
@@ -2,6 +2,7 @@
   cursor: pointer;
   display: flex;
   flex-direction: column;
+  justify-content: space-between;
   border-radius: 5px;
   background-color: var(--page-element);
   box-shadow: 0 0 10px 0 var(--page-element-shadow);
