--- a/src/index.css
+++ b/src/index.css
@@ -17,6 +17,7 @@
   --page-element-shadow: #1a232c;
   --main-background: hsl(207, 26%, 17%);
   --font-colour: hsl(0, 0%, 100%);
+  --attribution-link: #0e86d4;
 }
 
 [data-theme="light"] {
@@ -25,6 +26,7 @@
   --main-background: hsl(0, 0%, 98%);
   --font-colour: hsl(200, 15%, 8%);
   --light-mode-input: hsl(0, 0%, 52%);
+  --attribution-link: #055c9d;
 }
 
 body {
