:zap: typescript migration part one :zap:

--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,5 @@
 .App {
-  font-family: "Nunito Sans", sans-serif;
+  font-family: 'Nunito Sans', sans-serif;
   color: var(--font-colour);
   font-size: 14px;
   font-weight: 300;
